--- a/package.json
+++ b/package.json
@@ -55,5 +55,6 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.4",
     "tailwindcss": "^3.4.17"
-  }
+  },
+  "proxy": "http://localhost:8000"
 }
