--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
+    "serve:prod": "node server.js",
+    "dev:server": "nodemon server.js",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "concurrently -k \"npm run dev:server\" \"npm start\""
   },
   "eslintConfig": {
     "extends": [
@@ -52,6 +55,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "concurrently": "^9.2.0",
+    "nodemon": "^3.1.10",
     "postcss": "^8.5.4",
     "tailwindcss": "^3.4.17"
   },
