--- a/package.json
+++ b/package.json
@@ -27,13 +27,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start",    
     "build": "react-scripts build",
-    "serve:prod": "node server.js",
-    "dev:server": "nodemon server.js",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "dev": "concurrently -k \"npm run dev:server\" \"npm start\""
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
